Fixed overflow issue

--- a/styles/Background.module.css
+++ b/styles/Background.module.css
@@ -24,6 +24,3 @@
     font-style: italic;
 }
 
-.table { 
-    margin-block: 1.5rem;
-}
